k8s/deployment_manifest_node1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
  namespace: login-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
    spec:
      containers:
        - name: login-service
          image: ghcr.io/maengchanho/login-service:latest
          ports:
            - containerPort: 5006
          resources:
            requests:
              cpu: "0.2"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
      nodeSelector:
        kubernetes.io/hostname: kube-node1
      imagePullSecrets:
        - name: ghcr-secrets
