k8s/login_service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: login-service
spec:
  selector:
    app: login-service
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
      nodePort: 30012
  type: NodePort
