k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-service-ingress
  namespace: login-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: login-service
    http:
      paths:
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: login-service
              port:
                number: 5006
